# xmms-pulse

./: ChangeLog  Makefile.am  Makefile.in  bootstrap.sh  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  README  README.html  README.html.in  style.css
src/: Makefile.am  Makefile.in  inc.h  plugin.c
